; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/common/hid-sensors/extr_hid-sensor-attributes.c_hid_sensor_get_report_latency_info.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/common/hid-sensors/extr_hid-sensor-attributes.c_hid_sensor_get_report_latency_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hid_sensor_hub_device = type { i32 }
%struct.hid_sensor_common = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@HID_FEATURE_REPORT = common dso_local global i32 0, align 4
@HID_USAGE_SENSOR_PROP_REPORT_LATENCY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"Report latency attributes: %x:%x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hid_sensor_hub_device*, i32, %struct.hid_sensor_common*)* @hid_sensor_get_report_latency_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hid_sensor_get_report_latency_info(%struct.hid_sensor_hub_device* %0, i32 %1, %struct.hid_sensor_common* %2) #0 {
  %4 = alloca %struct.hid_sensor_hub_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.hid_sensor_common*, align 8
  store %struct.hid_sensor_hub_device* %0, %struct.hid_sensor_hub_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.hid_sensor_common* %2, %struct.hid_sensor_common** %6, align 8
  %7 = load %struct.hid_sensor_hub_device*, %struct.hid_sensor_hub_device** %4, align 8
  %8 = load i32, i32* @HID_FEATURE_REPORT, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @HID_USAGE_SENSOR_PROP_REPORT_LATENCY, align 4
  %11 = load %struct.hid_sensor_common*, %struct.hid_sensor_common** %6, align 8
  %12 = getelementptr inbounds %struct.hid_sensor_common, %struct.hid_sensor_common* %11, i32 0, i32 0
  %13 = call i32 @sensor_hub_input_get_attribute_info(%struct.hid_sensor_hub_device* %7, i32 %8, i32 %9, i32 %10, %struct.TYPE_2__* %12)
  %14 = load %struct.hid_sensor_hub_device*, %struct.hid_sensor_hub_device** %4, align 8
  %15 = getelementptr inbounds %struct.hid_sensor_hub_device, %struct.hid_sensor_hub_device* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.hid_sensor_common*, %struct.hid_sensor_common** %6, align 8
  %18 = getelementptr inbounds %struct.hid_sensor_common, %struct.hid_sensor_common* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.hid_sensor_common*, %struct.hid_sensor_common** %6, align 8
  %22 = getelementptr inbounds %struct.hid_sensor_common, %struct.hid_sensor_common* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @hid_dbg(i32 %16, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %20, i32 %24)
  ret void
}

declare dso_local i32 @sensor_hub_input_get_attribute_info(%struct.hid_sensor_hub_device*, i32, i32, i32, %struct.TYPE_2__*) #1

declare dso_local i32 @hid_dbg(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
